--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ethers": "5",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "zod": "^3.21.4"
   },
